Project

General

Profile

Bug #38761

Bitmap allocator might fail to return contiguous chunk despite having enough space

Added by Igor Fedotov about 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus, mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This happens when allocator has contiguous 4GB-aligned chunks to allocate from only. Internal stuff searching for free contiguous chunk operates 32-bit length field when doing the lookup. Due to 32-bit wrapping This results in free chunks of zero length to return. Which in turn is treated as the lack of free space.


Related issues

Copied to bluestore - Backport #38910: mimic: Bitmap allocator might fail to return contiguous chunk despite having enough space Resolved
Copied to bluestore - Backport #38911: luminous: Bitmap allocator might fail to return contiguous chunk despite having enough space Resolved
Copied to bluestore - Backport #38912: nautilus: Bitmap allocator might fail to return contiguous chunk despite having enough space Resolved

History

#1 Updated by Igor Fedotov about 5 years ago

  • Pull request ID set to 26939

#2 Updated by Igor Fedotov about 5 years ago

  • Status changed from 12 to Fix Under Review

#3 Updated by Sage Weil about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to nautilus, mimic, luminous

#4 Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38910: mimic: Bitmap allocator might fail to return contiguous chunk despite having enough space added

#5 Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38911: luminous: Bitmap allocator might fail to return contiguous chunk despite having enough space added

#6 Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38912: nautilus: Bitmap allocator might fail to return contiguous chunk despite having enough space added

#7 Updated by Igor Fedotov almost 5 years ago

  • Assignee set to Igor Fedotov

#8 Updated by Igor Fedotov almost 5 years ago

  • Status changed from Pending Backport to Resolved

Also available in: Atom PDF